# enchiridion

./: .envrc  .gitignore  README.md  dune-project  enchiridion.opam  exa-ocaml-search.opam  flake.nix  justfile  test.json
dotenv/: dotenv.ml  dune
lib/: dune  envlib.ml
providers/: dune  openai.ml
providers/openai_compatible/: client.ml  types.ml
tests/: dune  test_sse.ml  tests.ml
tools/: dune  exasearch.ml
